@@ -1,3 +1,7 @@
+TheKabal (26 January 2013)
+--------------------------------------
+Change the way admin checks the admin password
+
 TheMightyDude (26 January 2013)
 --------------------------------------
 Disabled Template System Module due to exploit...
